--- a/source/dev/_/components/btn/btn.sass
+++ b/source/dev/_/components/btn/btn.sass
@@ -29,6 +29,13 @@
 		border-radius: 5px
 		letter-spacing: 1.3px
 		padding: 5px 42px
+	&.--b-gray
+		border: 1px solid rgba(72,78,81,.2)
+		&:hover
+			color: #fff
+			border-color: transparent
+			background-color: #009cff
+			box-shadow: 0 1px 50px rgba(0, 156, 255, 0.4), inset 5px 5px 20px rgba(255, 255, 255, 0.55)
 	&.--bg-white
 		background-color: #fff
 		&:hover
@@ -45,6 +52,18 @@
 	&.--bg-green
 		color: #fff
 		background-color: #4caf50
+		box-shadow: inset 5px 5px 20px rgba(255, 255, 255, 0.35)
+	&.--whatsapp
+		color: #fff
+		background-color: #4daf51
+		box-shadow: inset 5px 5px 20px rgba(255, 255, 255, 0.35)
+	&.--viber
+		color: #fff
+		background-color: #6f3faa
+		box-shadow: inset 5px 5px 20px rgba(255, 255, 255, 0.35)
+	&.--telegram
+		color: #fff
+		background-color: #039be5
 		box-shadow: inset 5px 5px 20px rgba(255, 255, 255, 0.35)
 	&.--disabled
 		cursor: default !important
