--- a/source/dev/_/components/input/input.sass
+++ b/source/dev/_/components/input/input.sass
@@ -29,6 +29,15 @@
 		.input
 			&__area
 				padding-right: 55px
+	&.--bg-white
+		.input
+			&__area
+				border-radius: 5px
+				background-color: #fff
+			&__icon
+				svg
+					path
+						opacity: 0.25
 	&.--bg-gray
 		.input
 			&__area
