--- a/source/dev/_/parts/contacts.pug
+++ b/source/dev/_/parts/contacts.pug
@@ -1,10 +1,10 @@
-.contacts
+.contacts.--p-abs
 	.contacts__inner
 		.case
 			.contacts__wrap
 				.contacts__content
 					.contacts__title.h2 Наши контакты
-					.contacts__data
+					.contacts__data.row
 						.contacts__data-col
 							.contacts__phone.phone #[a(href="tel:+74951197437") +7 (495) 119-74-37]
 							.contacts__time.time Ежедневно 07:00–22:00
