--- a/source/dev/_/parts/cooperate.pug
+++ b/source/dev/_/parts/cooperate.pug
@@ -1,37 +1,40 @@
-.cooperate
+.cooperate.bg-wrap
 	.case
 		.cooperate__title.h1 #[strong Сотрудничаем] со строительными #[br]компаниями и бригадами
-		.cooperate__wrap
+		.cooperate__wrap.row
 			.cooperate__content
 				.cooperate__text
 					p Мы готовы заключить договор, #[br]по которому будем делать для вас #[br]штукатурку и стяжку пола #[br]по минимальной цене #[br]при определенном объеме #[br]за квартал
-				a.cooperate__btn.btn.--md.--bg-blue(href="") Обсудить сотрудничество
+				a.cooperate__btn.btn.--md.--bg-blue(href="") ОБСУДИТЬ СОТРУДНИЧЕСТВО
 			.cooperate__img
-				img(src="" alt="")
-			.cooperate__logos
+				img(src="_/uploads/petro-2.png" alt="")
+			.cooperate__logos.row
 				.cooperate__logo
-					img(src="" alt="")
+					img(src="_/uploads/pik.png" alt="")
 				.cooperate__logo
-					img(src="" alt="")
+					img(src="_/uploads/a101.png" alt="")
 				.cooperate__logo
-					img(src="" alt="")
+					img(src="_/uploads/glavstroy.png" alt="")
 				.cooperate__logo
-					img(src="" alt="")
+					img(src="_/uploads/ingrad.png" alt="")
 				.cooperate__logo
-					img(src="" alt="")
+					img(src="_/uploads/mr-group.png" alt="")
 				.cooperate__logo
-					img(src="" alt="")
+					img(src="_/uploads/group-etalon.png" alt="")
 				.cooperate__logo
-					img(src="" alt="")
+					img(src="_/uploads/capital-group.png" alt="")
 				.cooperate__logo
-					img(src="" alt="")
+					img(src="_/uploads/pioneer.png" alt="")
 				.cooperate__logo
-					img(src="" alt="")
+					img(src="_/uploads/gaas.png" alt="")
 				.cooperate__logo
-					img(src="" alt="")
+					img(src="_/uploads/donstroy.png" alt="")
 				.cooperate__logo
-					img(src="" alt="")
+					img(src="_/uploads/villago.png" alt="")
 				.cooperate__logo
-					img(src="" alt="")
+					img(src="_/uploads/vesper.png" alt="")
 
 			.cooperate__desc На объектах этих #[br]застройщиков мы #[br]уже сотрудничали #[br]со строительными #[br]бригадами
+
+	.cooperate__bg.bg
+		img(src="_/uploads/cooperate-bg.png" alt="")
