--- a/source/dev/_/parts/examples.pug
+++ b/source/dev/_/parts/examples.pug
@@ -7,7 +7,7 @@
 				.examples__name 1-комнатная
 				.examples__size до 40 м#[sup 2]
 				.examples__img
-					img(src="" alt="")
+					img(src="_/uploads/example-1.png" alt="")
 				.examples__price
 					.examples__price-title Стоимость
 					.examples__price-list.row
@@ -19,7 +19,7 @@
 				.examples__name 2-комнатная
 				.examples__size до 48 м#[sup 2]
 				.examples__img
-					img(src="" alt="")
+					img(src="_/uploads/example-2.png" alt="")
 				.examples__price
 					.examples__price-title Стоимость
 					.examples__price-list.row
@@ -31,7 +31,7 @@
 				.examples__name 3-комнатная
 				.examples__size до 60 м#[sup 2]
 				.examples__img
-					img(src="" alt="")
+					img(src="_/uploads/example-3.png" alt="")
 				.examples__price
 					.examples__price-title Стоимость
 					.examples__price-list.row
