--- a/source/dev/_/parts/reputation.pug
+++ b/source/dev/_/parts/reputation.pug
@@ -1,19 +1,23 @@
-.reputation
+.reputation.bg-wrap
 	.case
 		.reputation__wrap.row
 			.reputation__img-wrap
 				.reputation__person.person
 					.person__icon
-						img(src="" alt="")
+						img(src="_/uploads/avatar.png" alt="")
 					.person__name ПЕТР #[br]НИКИТИН
 					.person__position Руководитель #[br]компании
 				.reputation__img
-					img(src="" alt="")
+					img(src="_/uploads/petro-1.png" alt="")
 			.reputation__content
-				.reputation__title.h1 Дорожим своей #[br]репутацией и делаем #[br]каждый ремонт, #[br]как для себя
-				.reputation__quote.bi
+				.reputation__title.h1 Дорожим своей #[br]репутацией и делаем #[br]каждый ремонт, #[br]#[strong как для себя]
+				.reputation__quote.bi.--sm
 					.bi__icon
+						img(src="_/uploads/star-quote.png" alt="")
 					.bi__text.h2 А я лично готов решить любые вопросы, #[br]которые возникли во время работы
 				.reputation__btn-wrap
-					a.reputation__btn.btn.--md.--bg-blue(href="") Связаться с руководителем напрямую
+					a.reputation__btn.btn.--md.--bg-blue(href="") СВЯЗАТЬСЯ С РУКОВОДИТЕЛЕМ НАПРЯМУЮ
 					.reputation__desc У вас объект большее 1000 м#[sup 2] #[br]для оштукатуривания? Свяжитесь #[br]напрямую с Петром
+
+	.reputation__bg.bg
+		img(src="_/uploads/reputation-bg.png" alt="")
