--- a/source/dev/_/parts/reviews.pug
+++ b/source/dev/_/parts/reviews.pug
@@ -5,107 +5,122 @@
 		.reviews__desc.h3 Мы собрали последние отзывы о нашей работе и ссылки на них.
 		.reviews__wrap
 			.reviews__list
-				.reviews__list-wrap
-					.reviews__item.review
-						.review__wrap
-							.review__video
-							.review__quote.bi
-								.bi__icon
-								.bi__text «Цитата из видео важная, закрывающая боль или несколько болей»
-							.review__text Вот вам яркий пример современных тенденций - #[br]глубокий уровень погружения не оставляет шанса #[br]для модели развития. Сложно сказать, почему некоторые #[br]особенности внутренней политики набирают... Вот вам яркий пример современных тенденций - #[br]глубокий уровень погружения не оставляет шанса #[br]для модели развития. Сложно сказать, почему некоторые #[br]особенности внутренней политики набирают...
-					.reviews__item.review
-						.review__wrap
-							.review__video
-							.review__quote.bi
-								.bi__icon
-								.bi__text «Цитата из видео важная, закрывающая боль или несколько болей»
-							.review__text Вот вам яркий пример современных тенденций - #[br]глубокий уровень погружения не оставляет шанса #[br]для модели развития. Сложно сказать, почему некоторые #[br]особенности внутренней политики набирают... Вот вам яркий пример современных тенденций - #[br]глубокий уровень погружения не оставляет шанса #[br]для модели развития. Сложно сказать, почему некоторые #[br]особенности внутренней политики набирают...
-					.reviews__item.review
-						.review__wrap
-							.review__video
-							.review__quote.bi
-								.bi__icon
-								.bi__text «Цитата из видео важная, закрывающая боль или несколько болей»
-							.review__text Вот вам яркий пример современных тенденций - #[br]глубокий уровень погружения не оставляет шанса #[br]для модели развития. Сложно сказать, почему некоторые #[br]особенности внутренней политики набирают...
+				.reviews__list-case.swiper-container
+					.reviews__list-wrap.swiper-wrapper
+						.reviews__item.review.swiper-slide
+							.review__wrap
+								a.review__video(href="javascript:;" data-fancybox="")
+									img(src="_/uploads/video-1.png" alt="")
+								.review__quote.bi
+									.bi__icon
+										img(src="_/uploads/star-quote.png" alt="")
+									.bi__text «Цитата из видео важная, закрывающая боль или несколько болей»
+								.review__text Вот вам яркий пример современных тенденций - #[br]глубокий уровень погружения не оставляет шанса #[br]для модели развития. Сложно сказать, почему некоторые #[br]особенности внутренней политики набирают... Вот вам яркий пример современных тенденций - #[br]глубокий уровень погружения не оставляет шанса #[br]для модели развития. Сложно сказать, почему некоторые #[br]особенности внутренней политики набирают...
+						.reviews__item.review.swiper-slide
+							.review__wrap
+								a.review__video(href="javascript:;" data-fancybox="")
+									img(src="_/uploads/video-2.png" alt="")
+								.review__quote.bi
+									.bi__icon
+										img(src="_/uploads/star-quote.png" alt="")
+									.bi__text «Цитата из видео важная, закрывающая боль или несколько болей»
+								.review__text Вот вам яркий пример современных тенденций - #[br]глубокий уровень погружения не оставляет шанса #[br]для модели развития. Сложно сказать, почему некоторые #[br]особенности внутренней политики набирают... Вот вам яркий пример современных тенденций - #[br]глубокий уровень погружения не оставляет шанса #[br]для модели развития. Сложно сказать, почему некоторые #[br]особенности внутренней политики набирают...
+						.reviews__item.review.swiper-slide
+							.review__wrap
+								a.review__video(href="javascript:;" data-fancybox="")
+									img(src="_/uploads/video-1.png" alt="")
+								.review__quote.bi
+									.bi__icon
+										img(src="_/uploads/star-quote.png" alt="")
+									.bi__text «Цитата из видео важная, закрывающая боль или несколько болей»
+								.review__text Вот вам яркий пример современных тенденций - #[br]глубокий уровень погружения не оставляет шанса #[br]для модели развития. Сложно сказать, почему некоторые #[br]особенности внутренней политики набирают...
 				.reviews__arrows
 					.reviews__arrow.btn.arrow.--bg-white.--round.--prev
+						<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 451.846 451.847" style="enable-background:new 0 0 451.846 451.847;" xml:space="preserve"><path d="M345.441,248.292L151.154,442.573c-12.359,12.365-32.397,12.365-44.75,0c-12.354-12.354-12.354-32.391,0-44.744 L278.318,225.92L106.409,54.017c-12.354-12.359-12.354-32.394,0-44.748c12.354-12.359,32.391-12.359,44.75,0l194.287,194.284 c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,248.292z"/></svg>
 					.reviews__arrow.btn.arrow.--bg-white.--round.--next
+						<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 451.846 451.847" style="enable-background:new 0 0 451.846 451.847;" xml:space="preserve"><path d="M345.441,248.292L151.154,442.573c-12.359,12.365-32.397,12.365-44.75,0c-12.354-12.354-12.354-32.391,0-44.744 L278.318,225.92L106.409,54.017c-12.354-12.359-12.354-32.394,0-44.748c12.354-12.359,32.391-12.359,44.75,0l194.287,194.284 c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,248.292z"/></svg>
 
 			.reviews__list
-				.reviews__list-wrap
-					.reviews__item.review
-						.review__wrap
-							.review__rating
-							.review__text Вот вам яркий пример современных тенденций - #[br]глубокий уровень погружения не оставляет шанса #[br]для модели развития. Сложно сказать, почему некоторые #[br]особенности внутренней политики набирают...
-							.review__person
-								.review__person-img
-									img(src="" alt="")
-								.review__person-data
-									.review__person-name Алексей Задорожный
-									.review__person-location г. Москва
+				.reviews__list-case.swiper-container
+					.reviews__list-wrap.swiper-wrapper
+						.reviews__item.review.swiper-slide
+							.review__wrap
+								.review__rating #[i.star]#[i.star]#[i.star]#[i.star]#[i.star-o]
+								.review__text Вот вам яркий пример современных тенденций - #[br]глубокий уровень погружения не оставляет шанса #[br]для модели развития. Сложно сказать, почему некоторые #[br]особенности внутренней политики набирают...
+								.review__person
+									.review__person-img
+										img(src="_/uploads/user.png" alt="")
+									.review__person-data
+										.review__person-name Алексей Задорожный
+										.review__person-location г. Москва
 
-					.reviews__item.review
-						.review__wrap
-							.review__rating
-							.review__text Вот вам яркий пример современных тенденций - #[br]глубокий уровень погружения не оставляет шанса #[br]для модели развития. Сложно сказать, почему некоторые #[br]особенности внутренней политики набирают...
-							.review__person
-								.review__person-img
-									img(src="" alt="")
-								.review__person-data
-									.review__person-name Алексей Задорожный
-									.review__person-location г. Москва
+						.reviews__item.review.swiper-slide
+							.review__wrap
+								.review__rating #[i.star]#[i.star]#[i.star]#[i.star]#[i.star]
+								.review__text Вот вам яркий пример современных тенденций - #[br]глубокий уровень погружения не оставляет шанса #[br]для модели развития. Сложно сказать, почему некоторые #[br]особенности внутренней политики набирают...
+								.review__person
+									.review__person-img
+										img(src="_/uploads/user.png" alt="")
+									.review__person-data
+										.review__person-name Алексей Задорожный
+										.review__person-location г. Москва
 
-					.reviews__item.review
-						.review__wrap
-							.review__rating
-							.review__text Вот вам яркий пример современных тенденций - #[br]глубокий уровень погружения не оставляет шанса #[br]для модели развития. Сложно сказать, почему некоторые #[br]особенности внутренней политики набирают...
-							.review__person
-								.review__person-img
-									img(src="" alt="")
-								.review__person-data
-									.review__person-name Алексей Задорожный
-									.review__person-location г. Москва
+						.reviews__item.review.swiper-slide
+							.review__wrap
+								.review__rating #[i.star]#[i.star]#[i.star]#[i.star]#[i.star]
+								.review__text Вот вам яркий пример современных тенденций - #[br]глубокий уровень погружения не оставляет шанса #[br]для модели развития. Сложно сказать, почему некоторые #[br]особенности внутренней политики набирают...
+								.review__person
+									.review__person-img
+										img(src="_/uploads/user.png" alt="")
+									.review__person-data
+										.review__person-name Алексей Задорожный
+										.review__person-location г. Москва
 				.reviews__arrows
 					.reviews__arrow.btn.arrow.--bg-white.--round.--prev
+						<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 451.846 451.847" style="enable-background:new 0 0 451.846 451.847;" xml:space="preserve"><path d="M345.441,248.292L151.154,442.573c-12.359,12.365-32.397,12.365-44.75,0c-12.354-12.354-12.354-32.391,0-44.744 L278.318,225.92L106.409,54.017c-12.354-12.359-12.354-32.394,0-44.748c12.354-12.359,32.391-12.359,44.75,0l194.287,194.284 c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,248.292z"/></svg>
 					.reviews__arrow.btn.arrow.--bg-white.--round.--next
+						<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 451.846 451.847" style="enable-background:new 0 0 451.846 451.847;" xml:space="preserve"><path d="M345.441,248.292L151.154,442.573c-12.359,12.365-32.397,12.365-44.75,0c-12.354-12.354-12.354-32.391,0-44.744 L278.318,225.92L106.409,54.017c-12.354-12.359-12.354-32.394,0-44.748c12.354-12.359,32.391-12.359,44.75,0l194.287,194.284 c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,248.292z"/></svg>
 
 			.reviews__list
-				.reviews__list-wrap
-					.reviews__item.review
-						.review__wrap
-							.review__rating
-							.review__text Вот вам яркий пример современных тенденций - #[br]глубокий уровень погружения не оставляет шанса #[br]для модели развития. Сложно сказать, почему некоторые #[br]особенности внутренней политики набирают...
-						.review__aggregator.aggr
-							.aggr__logo
-								img(src="" alt="")
-							.aggr__data
-								.aggr__title Отзыв оставлен на сайте yell.ru
-								.aggr__value 1 год и 1 месяц назад
-									
-					.reviews__item.review
-						.review__wrap
-							.review__rating
-							.review__text Вот вам яркий пример современных тенденций - #[br]глубокий уровень погружения не оставляет шанса #[br]для модели развития. Сложно сказать, почему некоторые #[br]особенности внутренней политики набирают...
-						.review__aggregator.aggr
-							.aggr__logo
-								img(src="" alt="")
-							.aggr__data
-								.aggr__title Отзыв оставлен на сайте yell.ru
-								.aggr__value 1 год и 1 месяц назад
+				.reviews__list-case.swiper-container
+					.reviews__list-wrap.swiper-wrapper
+						.reviews__item.review.swiper-slide
+							.review__wrap
+								.review__rating #[i.star]#[i.star]#[i.star]#[i.star]#[i.star]
+								.review__text Вот вам яркий пример современных тенденций - #[br]глубокий уровень погружения не оставляет шанса #[br]для модели развития. Сложно сказать, почему некоторые #[br]особенности внутренней политики набирают...
+							.review__aggregator.aggr
+								.aggr__logo
+									img(src="_/uploads/logo-yell.png" alt="")
+								.aggr__data
+									.aggr__title Отзыв оставлен на сайте yell.ru
+									.aggr__value 1 год и 1 месяц назад
+										
+						.reviews__item.review.swiper-slide
+							.review__wrap
+								.review__rating #[i.star]#[i.star]#[i.star]#[i.star]#[i.star]
+								.review__text Вот вам яркий пример современных тенденций - #[br]глубокий уровень погружения не оставляет шанса #[br]для модели развития. Сложно сказать, почему некоторые #[br]особенности внутренней политики набирают...
+							.review__aggregator.aggr
+								.aggr__logo
+									img(src="_/uploads/logo-yell.png" alt="")
+								.aggr__data
+									.aggr__title Отзыв оставлен на сайте yell.ru
+									.aggr__value 1 год и 1 месяц назад
 
-					.reviews__item.review
-						.review__wrap
-							.review__rating
-							.review__text Вот вам яркий пример современных тенденций - #[br]глубокий уровень погружения не оставляет шанса #[br]для модели развития. Сложно сказать, почему некоторые #[br]особенности внутренней политики набирают...
-						.review__aggregator.aggr
-							.aggr__logo
-								img(src="" alt="")
-							.aggr__data
-								.aggr__title Отзыв оставлен на сайте yell.ru
-								.aggr__value 1 год и 1 месяц назад
+						.reviews__item.review.swiper-slide
+							.review__wrap
+								.review__rating #[i.star]#[i.star]#[i.star]#[i.star]#[i.star]
+								.review__text Вот вам яркий пример современных тенденций - #[br]глубокий уровень погружения не оставляет шанса #[br]для модели развития. Сложно сказать, почему некоторые #[br]особенности внутренней политики набирают...
+							.review__aggregator.aggr
+								.aggr__logo
+									img(src="_/uploads/logo-yell.png" alt="")
+								.aggr__data
+									.aggr__title Отзыв оставлен на сайте yell.ru
+									.aggr__value 1 год и 1 месяц назад
 				.reviews__arrows
 					.reviews__arrow.btn.arrow.--bg-white.--round.--prev.--mt
+						<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 451.846 451.847" style="enable-background:new 0 0 451.846 451.847;" xml:space="preserve"><path d="M345.441,248.292L151.154,442.573c-12.359,12.365-32.397,12.365-44.75,0c-12.354-12.354-12.354-32.391,0-44.744 L278.318,225.92L106.409,54.017c-12.354-12.359-12.354-32.394,0-44.748c12.354-12.359,32.391-12.359,44.75,0l194.287,194.284 c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,248.292z"/></svg>
 					.reviews__arrow.btn.arrow.--bg-white.--round.--next.--mt
+						<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 451.846 451.847" style="enable-background:new 0 0 451.846 451.847;" xml:space="preserve"><path d="M345.441,248.292L151.154,442.573c-12.359,12.365-32.397,12.365-44.75,0c-12.354-12.354-12.354-32.391,0-44.744 L278.318,225.92L106.409,54.017c-12.354-12.359-12.354-32.394,0-44.748c12.354-12.359,32.391-12.359,44.75,0l194.287,194.284 c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,248.292z"/></svg>
 
 		.reviews__more.btn-wrap
-			a.reviews__more-btn.btn.--md.--b-gray(href="javascript:;") Смотреть подробнее
+			a.reviews__more-btn.btn.--md.--b-gray(href="javascript:;") СМОТРЕТЬ ПОДРОБНЕЕ
