--- a/source/dev/_/parts/save.pug
+++ b/source/dev/_/parts/save.pug
@@ -3,16 +3,16 @@
 		.save__wrap.row
 			.save__img-wrap
 				.save__img
-					img(src="" alt="")
+					img(src="_/uploads/hand-star.png" alt="")
 			.save__content
 				.save__title.h1 Сохраняйте наш #[br]сайт в закладки,
 				.save__subtitle.bi
 					.bi__icon
-						img(src="" alt="")
+						img(src="_/uploads/star-percent-green.png" alt="")
 					.bi__text.h2 чтобы не пропустить #[br]еженедельные акции
 				.save__copy.copy
-					.copy__title Скопируйте адрес сайта и сохраните его
-					.copy__wrap
+					.copy__title.h3 Скопируйте адрес сайта и сохраните его
+					.copy__wrap.row
 						.copy__icon
-							img(src="" alt="")
+							img(src="_/uploads/click.png" alt="")
 						.copy__text Добавьте сайт в закладки: #[br]нажмите Ctrl+D
