--- a/source/dev/_/parts/steps.pug
+++ b/source/dev/_/parts/steps.pug
@@ -5,29 +5,29 @@
 			.steps__item
 				.steps__text
 					p Оставьте заявку на сайте для расчета стоимости 
-					p.--xs Или звоните по номеру #[img(src="" alt="")] #[a(href="tel:") +7 (495) 119-74-37]
+					p.--xs Или звоните по номеру #[img(src="_/uploads/telephone-green.svg" alt="")] #[a(href="tel:") +7 (495) 119-74-37]
 				.steps__img
-					img(src="" alt="")
+					img(src="_/uploads/step-1.png" alt="")
 				a.steps__btn.btn.--md.--bg-blue(href="") РАССЧИТАТЬ СТОИМОСТЬ
 				.steps__count 01
 			.steps__item
 				.steps__text Замерщик бесплатно приедет на объект #[br]и рассчитает стоимость
 				.steps__img
-					img(src="" alt="")
+					img(src="_/uploads/step-2.png" alt="")
 				.steps__count 02
 			.steps__item
 				.steps__text Если вам все понравится - подпишем договор #[br]и зафиксируем 5 ценных подарков
 				.steps__img
-					img(src="" alt="")
+					img(src="_/uploads/step-3.png" alt="")
 				.steps__count 03
 			.steps__item
 				.steps__text Бригада заедет на объект, а вы внесете #[br]аванс 30%
 
 				.steps__img
-					img(src="" alt="")
+					img(src="_/uploads/step-4.png" alt="")
 				.steps__count 04
 			.steps__item
 				.steps__text Мы оштукатурим - вы примете работы #[br]и внесете остаток
 				.steps__img
-					img(src="" alt="")
+					img(src="_/uploads/step-5.png" alt="")
 				.steps__count 05
