--- a/source/dev/_/components/btn/btn.css
+++ b/source/dev/_/components/btn/btn.css
@@ -30,6 +30,15 @@
   letter-spacing: 1.3px;
   padding: 5px 42px;
 }
+.btn.--b-gray {
+  border: 1px solid rgba(72, 78, 81, 0.2);
+}
+.btn.--b-gray:hover {
+  color: #fff;
+  border-color: transparent;
+  background-color: #009cff;
+  box-shadow: 0 1px 50px rgba(0, 156, 255, 0.4), inset 5px 5px 20px rgba(255, 255, 255, 0.55);
+}
 .btn.--bg-white {
   background-color: #fff;
 }
@@ -51,6 +60,21 @@
 .btn.--bg-green {
   color: #fff;
   background-color: #4caf50;
+  box-shadow: inset 5px 5px 20px rgba(255, 255, 255, 0.35);
+}
+.btn.--whatsapp {
+  color: #fff;
+  background-color: #4daf51;
+  box-shadow: inset 5px 5px 20px rgba(255, 255, 255, 0.35);
+}
+.btn.--viber {
+  color: #fff;
+  background-color: #6f3faa;
+  box-shadow: inset 5px 5px 20px rgba(255, 255, 255, 0.35);
+}
+.btn.--telegram {
+  color: #fff;
+  background-color: #039be5;
   box-shadow: inset 5px 5px 20px rgba(255, 255, 255, 0.35);
 }
 .btn.--disabled {
