--- a/source/dev/_/parts/pay.pug
+++ b/source/dev/_/parts/pay.pug
@@ -1,17 +1,17 @@
 .pay
 	.pay__inner
 		.case
-			.pay__wrap
+			.pay__wrap.row
 				.pay__img
-					img(src="" alt="")
+					img(src="_/uploads/pay-img.png" alt="")
 				.pay__content
 					.pay__methods.row
 						.pay__method
-							img(src="" alt="")
+							img(src="_/uploads/visa.png" alt="")
 						.pay__method
-							img(src="" alt="")
+							img(src="_/uploads/mastercard.png" alt="")
 					.pay__title Мы принимаем #[br]оплату любой картой - вы #[br]получаете cashback 10%
-					.pay__text
+					.pay__text.h3
 						p Перед началом работ заключаем договор.
 						p Все платежи проходят официально
-					a.pay__btn.btn.--md.--bg-blue(href="") Подробнее о договоре и оплате
+					a.pay__btn.btn.--md.--bg-blue(href="") ПОДРОБНЕЕ О ДОГОВОРЕ И ОПЛАТЕ
