--- a/source/dev/_/parts/youtube.pug
+++ b/source/dev/_/parts/youtube.pug
@@ -1,24 +1,27 @@
 .youtube
 	.case
-		.youtube__title.h1 Ведём #[img(src="" alt="")] YouTube канал #[br] по строительству с 2017 года
+		.youtube__title.h1 Ведём #[img(src="_/uploads/youtube-icon.png" alt="")] YouTube канал #[br] по строительству с 2017 года
 		.youtube__subtitle.h2 и знаем все подводные камни
-		.youtube__desc На нашем канале уже 18600 подписчиков и 1 800 000 просмотров
+		.youtube__desc.h3 На нашем канале уже 18600 подписчиков и 1 800 000 просмотров
 		.youtube__list.row
-			.youtube__item
-				a.youtube__wrap(href="javascript:;" data-src="" data-fancybox="")
-					img(src="" alt="")
+			a.youtube__item(href="javascript:;" data-src="" data-fancybox="")
+				.youtube__wrap
+					img(src="_/uploads/video-block-1.png" alt="")
 				.youtube__data
 					.youtube__name название видео
-					a.youtube__link(href="") 
-			.youtube__item
-				a.youtube__wrap(href="javascript:;" data-src="" data-fancybox="")
-					img(src="" alt="")
+					.youtube__link
+						<svg width="51" height="8" viewBox="0 0 51 8" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M50.3536 4.35355C50.5488 4.15829 50.5488 3.84171 50.3536 3.64645L47.1716 0.464466C46.9763 0.269204 46.6597 0.269204 46.4645 0.464466C46.2692 0.659728 46.2692 0.976311 46.4645 1.17157L49.2929 4L46.4645 6.82843C46.2692 7.02369 46.2692 7.34027 46.4645 7.53553C46.6597 7.7308 46.9763 7.7308 47.1716 7.53553L50.3536 4.35355ZM0 4.5H50V3.5H0V4.5Z" fill="black"/></svg>
+			a.youtube__item(href="javascript:;" data-src="" data-fancybox="")
+				.youtube__wrap
+					img(src="_/uploads/video-block-2.png" alt="")
 				.youtube__data
 					.youtube__name название видео
-					a.youtube__link(href="") 
-			.youtube__item
-				a.youtube__wrap(href="javascript:;" data-src="" data-fancybox="")
-					img(src="" alt="")
+					.youtube__link
+						<svg width="51" height="8" viewBox="0 0 51 8" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M50.3536 4.35355C50.5488 4.15829 50.5488 3.84171 50.3536 3.64645L47.1716 0.464466C46.9763 0.269204 46.6597 0.269204 46.4645 0.464466C46.2692 0.659728 46.2692 0.976311 46.4645 1.17157L49.2929 4L46.4645 6.82843C46.2692 7.02369 46.2692 7.34027 46.4645 7.53553C46.6597 7.7308 46.9763 7.7308 47.1716 7.53553L50.3536 4.35355ZM0 4.5H50V3.5H0V4.5Z" fill="black"/></svg>
+			a.youtube__item(href="javascript:;" data-src="" data-fancybox="")
+				.youtube__wrap
+					img(src="_/uploads/video-block-3.png" alt="")
 				.youtube__data
 					.youtube__name название видео
-					a.youtube__link(href="") 
+					.youtube__link
+						<svg width="51" height="8" viewBox="0 0 51 8" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M50.3536 4.35355C50.5488 4.15829 50.5488 3.84171 50.3536 3.64645L47.1716 0.464466C46.9763 0.269204 46.6597 0.269204 46.4645 0.464466C46.2692 0.659728 46.2692 0.976311 46.4645 1.17157L49.2929 4L46.4645 6.82843C46.2692 7.02369 46.2692 7.34027 46.4645 7.53553C46.6597 7.7308 46.9763 7.7308 47.1716 7.53553L50.3536 4.35355ZM0 4.5H50V3.5H0V4.5Z" fill="black"/></svg>
