--- a/source/dev/_/components/btn/btn.css
+++ b/source/dev/_/components/btn/btn.css
@@ -57,6 +57,12 @@
   background-color: #009cff;
   box-shadow: 0 1px 50px rgba(0, 156, 255, 0.4), inset 5px 5px 20px rgba(255, 255, 255, 0.55);
 }
+.btn.--bg-gray {
+  background-color: #f4f4f4;
+}
+.btn.--bg-gray:hover {
+  color: #2a88d1;
+}
 .btn.--bg-green {
   color: #fff;
   background-color: #4caf50;
