--- a/source/dev/_/components/btn/btn.sass
+++ b/source/dev/_/components/btn/btn.sass
@@ -49,6 +49,11 @@
 		&:hover
 			background-color: #009cff
 			box-shadow: 0 1px 50px rgba(0, 156, 255, 0.4), inset 5px 5px 20px rgba(255, 255, 255, 0.55)
+	&.--bg-gray
+		background-color: #f4f4f4
+		&:hover
+			color: $blue
+			
 	&.--bg-green
 		color: #fff
 		background-color: #4caf50
