--- a/source/dev/_/parts/contacts.pug
+++ b/source/dev/_/parts/contacts.pug
@@ -1,7 +1,7 @@
 .contacts.--p-abs
 	.contacts__inner
 		.case
-			.contacts__wrap
+			.contacts__wrap.row 
 				.contacts__content
 					.contacts__title.h2 Наши контакты
 					.contacts__data.row
@@ -10,21 +10,24 @@
 							.contacts__time.time Ежедневно 07:00–22:00
 							.contacts__consult.b-consult
 								.b-consult__icon
-								.b-consult__link #[a(href="") Консультация в WhatsApp]
+									<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve"><path style="fill:#4CAF50;" d="M256.064,0h-0.128l0,0C114.784,0,0,114.816,0,256c0,56,18.048,107.904,48.736,150.048l-31.904,95.104	l98.4-31.456C155.712,496.512,204,512,256.064,512C397.216,512,512,397.152,512,256S397.216,0,256.064,0z"/><path style="fill:#FAFAFA;" d="M405.024,361.504c-6.176,17.44-30.688,31.904-50.24,36.128c-13.376,2.848-30.848,5.12-89.664-19.264	C189.888,347.2,141.44,270.752,137.664,265.792c-3.616-4.96-30.4-40.48-30.4-77.216s18.656-54.624,26.176-62.304	c6.176-6.304,16.384-9.184,26.176-9.184c3.168,0,6.016,0.16,8.576,0.288c7.52,0.32,11.296,0.768,16.256,12.64	c6.176,14.88,21.216,51.616,23.008,55.392c1.824,3.776,3.648,8.896,1.088,13.856c-2.4,5.12-4.512,7.392-8.288,11.744	c-3.776,4.352-7.36,7.68-11.136,12.352c-3.456,4.064-7.36,8.416-3.008,15.936c4.352,7.36,19.392,31.904,41.536,51.616	c28.576,25.44,51.744,33.568,60.032,37.024c6.176,2.56,13.536,1.952,18.048-2.848c5.728-6.176,12.8-16.416,20-26.496	c5.12-7.232,11.584-8.128,18.368-5.568c6.912,2.4,43.488,20.48,51.008,24.224c7.52,3.776,12.48,5.568,14.304,8.736	C411.2,329.152,411.2,344.032,405.024,361.504z"/></svg>
+								.b-consult__link #[a(href="" target="_blank") Консультация в WhatsApp]
 						.contacts__data-col
 							.contacts__contact.contact
 								.contact__head
 									.contact__icon
+										<svg version="1.1"  xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 487.724 487.724" style="enable-background:new 0 0 487.724 487.724;" xml:space="preserve"><path d="M236.925,0.124c-96.9,3.4-177.4,79-186.7,175.5c-1.9,19.3-0.8,38,2.6,55.9l0,0c0,0,0.3,2.1,1.3,6.1	c3,13.4,7.5,26.4,13.1,38.6c19.5,46.2,64.6,123.5,165.8,207.6c6.2,5.2,15.3,5.2,21.6,0c101.2-84,146.3-161.3,165.9-207.7	c5.7-12.2,10.1-25.1,13.1-38.6c0.9-3.9,1.3-6.1,1.3-6.1l0,0c2.3-12,3.5-24.3,3.5-36.9C438.425,84.724,347.525-3.776,236.925,0.124	z M243.825,291.324c-52.2,0-94.5-42.3-94.5-94.5s42.3-94.5,94.5-94.5s94.5,42.3,94.5,94.5S296.025,291.324,243.825,291.324z"/></svg>
 									.contact__title ОФИС
 								.contact__value ул. Инструментальная, д.3 
 
 							.contacts__contact.contact
 								.contact__head
 									.contact__icon
+										img(src="_/uploads/email.png" alt="")
 									.contact__title e-mail
 								.contact__value #[a(href="mailto:shukashtuka@io.ru") shukashtuka@io.ru]
 				.contacts__img
-					img(src="" alt="")
+					img(src="_/uploads/voronin-1.png" alt="")
 				.contacts__feedback
-					.contacts__title.h2 приедем к вам на замер
+					.contacts__title приедем к вам на замер
 					.contacts__btn.btn.--md.--bg-blue(href="") ВЫЗВАТЬ СПЕЦИАЛИСТА
